--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <p>Lorem ipsum dolor sit arnet, consectetur adipiscing elit. Mauris interdum velit vitae nulla molesite eu.</p></div>
 <div class="strelka"><img src="image/icons.png"><p>Lorem ipsum dolor</p>
 <img src="image/icons.png"><p>Lorem ipsum dolor</p></div>
-<video class="vidos" src="HD_Red.mkv" width="420" height="300" controls></video>
+<video class="vidos" src="HD_Red.mkv" width="420" height="300" poster="image/4.jpg" controls></video>
 </section>
 <section class="icons">
 <div class="whyBox">
